--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     FILE DESCRIPTION: DUYU09'S MINI CLOUD STORAGE (NET DISK) STATIC FRONT-END INTERFACE.
     CREATION DATE: DECEMBER 17, 2023 V1.0
     LAST MODIFIED: DECEMBER 17, 2023 V1.0
-    FILE AUTHOR: QILU UNIVERSITY OF TECHNOLOGY (SHANDONG ACADEMY OF SCIENCES) DEPARTMENT OF COMPUTER SCIENCE AND TECHNOLOGY SOFTWARE ENGINEERING (SOFTWARE DEVELOPMENT) CLASS 21-1 DU YU (NO.202103180009). ALL RIGHTS RESERVED.
+    FILE AUTHOR: DU YU (NO.202103180009), FACULTY OF COMPUTER SCIENCE AND TECHNOLOGY, QILU UNIVERSITY OF TECHNOLOGY (SHANDONG ACADEMY OF SCIENCES). ALL RIGHTS RESERVED.
     COPYRIGHT NOTICE: COPYRIGHT (C) 2023 DUYU (@DUYU09).
 
     TÊN TẬP TIN: INDEX.HTML
